added basic code with horizontalpager with compose

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,7 +14,7 @@
         android:name=".AiApplication"
         tools:targetApi="31">
         <activity
-            android:name=".ui.slider.SliderActivity"
+            android:name=".ui.screens.slider.SliderActivity"
             android:exported="true"
             android:label="@string/app_name"
             android:theme="@style/Theme.MyApplication">
