--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,7 +26,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".ui.screens.home.MainActivity"
+        <activity android:name=".ui.screens.home.HomeActivity"
             android:screenOrientation="portrait"/>
     </application>
 
