--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,7 +16,7 @@
 
         tools:targetApi="31">
         <activity
-            android:name=".ui.screens.slider.SliderActivity"
+            android:name=".ui.screens.TestActitvity"
             android:exported="true"
             android:label="@string/app_name"
             android:screenOrientation="portrait"
