--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,8 @@
     <uses-permission android:name="android.permission.ACCESS_BACKGROUND_LOCATION" />
     <uses-permission android:name="android.permission.POST_NOTIFICATIONS"/>
     <uses-permission android:name="android.permission.FOREGROUND_SERVICE_LOCATION" />
-
+    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"  />
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
@@ -35,6 +36,8 @@
             </intent-filter>
         </activity>
         <activity android:name=".ui.screens.home.HomeActivity"
+            android:screenOrientation="portrait"/>
+        <activity android:name=".ui.screens.mapview.OsmMaptActivity"
             android:screenOrientation="portrait"/>
         <service
             android:name=".service.AiCameraLocationUpdateService"
