--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,8 +21,8 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.AiCameraSplashScreen"
         android:name=".AiApplication"
-
         tools:targetApi="31">
+
         <activity
             android:name=".ui.screens.slider.SliderActivity"
             android:exported="true"
@@ -50,6 +50,18 @@
             android:exported="true">
 
         </receiver>
+
+
+     <!--   <provider
+            android:name="androidx.startup.InitializationProvider"
+            android:authorities="${applicationId}.androidx-startup"
+            tools:node="remove">
+        </provider>-->
+        <provider
+            android:name="androidx.startup.InitializationProvider"
+            android:authorities="${applicationId}.androidx-startup"
+            tools:node="remove">
+        </provider>
 
 
     <!--    <receiver android:name=".geofencing.GeofenceBroadcastReceiverTwo"
